# wallet-api

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: database.py  exceptions.py  main.py  pyproject.toml  security.py  settings.py
app/controller/: base_controller.py  chat.py  friendship.py  login.py  transaction.py  user.py  wallet.py
app/exceptions/: exception_heandlers.py  friendship.py  permissions.py
app/models/: __init__.py  chat.py  friendship.py  message.py  transaction.py  user.py  user_authenticator.py  wallet.py
app/routers/: chat.py  friendship.py  login.py  transaction.py  user.py  wallet.py
app/shcemas/: chat.py  friendship.py  generic.py  login.py  transaction.py  user.py  wallet.py
app/utils/: annotated.py  fake_data.py  safety.py
migrations/: env.py
migrations/versions/: 35eac23e2e13_created_wallet_and_transaction_dbtables.py  419dd938c914_frienship_model.py  54f2ec3c29a2_added_user_nickname.py  64739a10c352_chat_and_message_models.py  7e340a0d967f_create_user_and_user_authenticator_.py
tests/: base_test_class.py  conftest.py
tests/chat/: test_create_chat.py  test_delete_chat.py  test_get_chat.py
tests/friendship/: test_accept_friendship.py  test_create_friendship.py  test_get_friendship.py  test_reject_friendship.py
tests/login/: test_login.py  test_logout.py
tests/transaction/: test_create_transaction.py  test_get_transaction.py
tests/user/: test_create_user.py  test_get_user.py
tests/utils/: friendship.py  transaction.py  user.py  user_authenticator.py  wallet.py
(+4 files in other folders)
